install express and set up public folder

--- a/public/mint.html
+++ b/public/mint.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Mint bKES</title>
 </head>
 <body>
-    <h3>Ola</h3>
+    <h3>Mint bKES</h3>
+    Vault:<div id="vaultAmount"></div>
     <form action="/submit-perform" method="post">
-        <input type="text" name="Address" id="address">
+        <!-- <input type="text" name="Address" id="address"> -->
         <input type="text" name="Amount" id="amount">
         <button type="submit">Submit</button>
     </form>
+<script src="../scripts/contractInteraction.js"></script>  
 </body>
 </html>
