--- a/public/transfer.html
+++ b/public/transfer.html
@@ -23,15 +23,15 @@
             <p class="m-0 p-0">You have:</p>
             <div class="d-flex">
               <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
-              <small class="fw-light mt-1 ms-1 py-2">Collateral</small>
+              <small class="fw-light mt-1 ms-1 py-2">Matic</small>
             </div>
             <div class="mt-3">
-              <small class="bg-light text-muted p-2 px-3 rounded-pill"><span id="showAccount"></span></small>
+              <small class="bg-light text-muted p-2 rounded-pill"><span id="showAccount"></span></small>
             </div>
           </div>
         </div>
         <div class="mt-5">
-          <h5 class="fw-bold">Transfer Matic</h5>
+          <h5 class="fw-bold">Deposit Matic Collateral</h5>
           <div class="form-group mt-3">
             <label for="amount">Amount</label>
             <input type="text" id="amount" class="form-control" />
