--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liquidity Positions</title>
+    <title>debt Positions</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
+
 <body>
-    
+    <div class="container mt-">
+        <div class="d-flex min-vh-100 justify-content-center align-items-center">
+            <section class="border rounded p-4 py-5 shadow">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Vault Balance</th>
+                            <th scope="col">Health Factor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
+                            <td>5.12</td>
+                            <td>@45</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
+                            <td>5.12</td>
+                            <td>@45</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
+                            <td>5.15</td>
+                            <td>@45</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
+    </div>
 </body>
 </html>
