--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Home</title>
-    <!-- <script src="../scripts/connectWallet.js"></script> -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="js/connectWallet.js"></script>
 </head>
+
 <body>
-    <h3>Welcome to bKES</h3>
-    <h2>MetaMask Account: <span id="showAccount"></span></h2>
-    <button onclick="EthButtonClick()">Connect MetaMask</button>
-<script src="js/connectWallet.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<div id="usrAddress">
+  <h5 class="btn btn-info w-100">Account: <span id="showAccount"></span></h5>
+</div>
+<div id="walletConnect">
+  <button class="btn btn-success w-100" onclick="EthButtonClick()">Connect MetaMask</button>
+</div>
+  <div class="container mt-">
+    <div class="d-flex min-vh-100 justify-content-center align-items-center">
+      <section class="border rounded p-4 py-5 shadow">
+        <h5>Welcome to bKES</h3>
+        <div>
+          <div class="card text-light bg-dark p-4" style="width: 400px">
+            <p class="m-0 p-0">You have:</p>
+            <div class="d-flex">
+              <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
+              <small class="fw-light mt-1 ms-1 py-2">Matic</small>
+            </div>
+            <!-- <div class="mt-3">
+              <small class="bg-light text-muted p-2 rounded-pill"><span id="showAccount"></span></small>
+            </div> -->
+          </div>
+        </div>
+        <div class="mt-5">
+          <h5 class="fw-bold">deposit Matic</h5>
+          <div class="form-group mt-3">
+            <label for="amount">Amount</label>
+            <input type="text" id="amount" class="form-control" />
+          </div>
+          <div class="form-group mt-3">
+            <button class="sendEthButton btn btn-success w-100">
+              Deposit
+            </button>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+  <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+  <script>
+    window.onload = async function() {
+        var usrWallet = await ethereum.request({ method: 'eth_requestAccounts' });
+        console.log(usrWallet);
+
+        if(usrWallet != null) {
+            document.getElementById('walletConnect').style.visibility = 'hidden'; 
+        }else {
+            document.getElementById('usrAddress').style.visibility = 'visible'; 
+        }
+    }
+  </script>
+  <script type="module">
+    import { ethers } from "./js/ethers.js";
+       const provider = new ethers.providers.Web3Provider(window.ethereum)
+
+    const signer = provider.getSigner();
+
+    async function getBalance() {
+
+      const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+      const account = accounts[0];
+
+      const balance = await provider.getBalance(account);
+
+      const remainder = balance.mod(1e14);
+      const fmtBalance = ethers.utils.formatEther(balance.sub(remainder));
+      console.log(fmtBalance);
+
+      // we use the code below to convert the balance from wei to eth
+      document.querySelector('#showBalance').innerHTML = fmtBalance;
+      document.querySelector('#showAccount').innerHTML = account;
+    }
+
+    async function sendCollateral() {
+
+      const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+      const account = accounts[0];
+
+      const sendVal = document.getElementById("amount").value;//ethers.utils.parseUnits(document.getElementById("amount").value, 18);
+
+      const gas_limit = "0x100000";
+      const gasPrice = await provider.getGasPrice();
+
+      // Sending Matic to an address
+      const sendCollateraltx = {
+        from: account,
+        to: '0x391E3567e8Da8018f592e1855A4459629c0E1d8A',
+        value: sendVal,
+        nonce: provider.getTransactionCount(account, "latest"),
+        gasLimit: ethers.utils.hexlify(gas_limit), // 100000
+        gasPrice: ethers.utils.hexlify(gasPrice),
+      };
+    }
+    getBalance()
+    document.querySelector('button').addEventListener('click', sendCollateral);
+  </script>
 </body>
 </html>
