--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
     rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity=
+        "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+        crossorigin="anonymous">
+    </script>
   <script src="js/connectWallet.js"></script>
 </head>
 
@@ -45,7 +50,7 @@
             <input type="text" id="amount" class="form-control" />
           </div>
           <div class="form-group mt-3">
-            <button class="sendEthButton btn btn-success w-100">
+            <button class="sendEthButton btn btn-success w-100" id="sendEthButton">
               Deposit
             </button>
           </div>
@@ -68,7 +73,7 @@
   </script>
   <script type="module">
     import { ethers } from "./js/ethers.js";
-       const provider = new ethers.providers.Web3Provider(window.ethereum)
+    const provider = new ethers.providers.Web3Provider(window.ethereum)
 
     const signer = provider.getSigner();
 
@@ -107,9 +112,38 @@
         gasLimit: ethers.utils.hexlify(gas_limit), // 100000
         gasPrice: ethers.utils.hexlify(gasPrice),
       };
+
+      const collateralTransfer = await signer.sendTransaction(sendCollateraltx);
+      
+      const collateralTransferTx = await collateralTransfer.wait();
+
+      console.log(collateralTransferTx);
+
+      if (collateralTransferTx.status == 1) {
+        console.log("initiate post data function");
+        console.log(account, sendVal);
+
+        $.ajax({
+          type: 'post',
+          url: '/valueCollateral',
+          data : {
+            address: account,
+            amount: sendVal
+          },
+          success: function(data) {
+            alert("Succesfully posted transaction");
+            console.log("succesful data post");
+          },
+          error: function(err) {
+            console.log(err.statusText);
+          }
+        });
+      } else {
+        console.log("Transaction unsuccesful");
+      }
     }
     getBalance()
-    document.querySelector('button').addEventListener('click', sendCollateral);
+    document.getElementById('sendEthButton').addEventListener('click', sendCollateral);
   </script>
 </body>
 </html>
