--- a/public/mint.html
+++ b/public/mint.html
@@ -12,6 +12,11 @@
     rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity=
+    "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+    crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
@@ -22,7 +27,8 @@
           <div class="card text-light bg-dark p-4" style="width: 400px">
             <p class="m-0 p-0">You have:</p>
             <div class="d-flex">
-              <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
+              <!-- <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3> -->
+              <h3 class="fw-bold mt-1"><span id="vaultBalance"></span></h3>
               <small class="fw-light mt-1 ms-1 py-2">bKES Vault</small>
             </div>
             <div class="mt-3">
@@ -46,6 +52,20 @@
     </div>
   </div>
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+  <script>
+    $.ajax({
+      type: 'get',
+      url: '/getVaultBalance',
+      dataType: 'json',
+      success: function(data) {
+        console.log(data);
+        document.querySelector('#vaultBalance').innerHTML = data.vaultAmount;
+      },
+      error: function(err) {
+        console.log(err.statusText);
+      }
+    });
+  </script>
   <script type="module">
     import { ethers } from "./js/ethers.js";
 
@@ -65,34 +85,28 @@
       console.log(fmtBalance);
 
       // we use the code below to convert the balance from wei to eth
-      document.querySelector('#showBalance').innerHTML = fmtBalance;
+      // document.querySelector('#showBalance').innerHTML = fmtBalance;
       document.querySelector('#showAccount').innerHTML = account;
     }
 
-    async function sendCollateral() {
-
-      const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-      const account = accounts[0];
-
-      const sendVal = ethers.utils.parseUnits(document.getElementById("amount").value, 18);
-
-      const gas_limit = "0x100000";
-      const gasPrice = await provider.getGasPrice();
-
-      // Sending Matic to an address
-      const sendCollateraltx = {
-        from: account,
-        to: '0x391E3567e8Da8018f592e1855A4459629c0E1d8A',
-        value: sendVal,
-        nonce: provider.getTransactionCount(account, "latest"),
-        gasLimit: ethers.utils.hexlify(gas_limit), // 100000
-        gasPrice: ethers.utils.hexlify(gasPrice),
-      };
-
-      const collateralTransfer = await signer.sendTransaction(sendCollateraltx);
+    async function mintbKES() {
+      $.ajax({
+          type: 'post',
+          url: '/mintbKES',
+          data : {
+            address: account,
+            amount: document.getElementById("amount").value
+          },
+          success: function(data) {
+            console.log("succesful data post");
+          },
+          error: function(err) {
+            console.log(err.statusText);
+          }
+        });
     }
     getBalance()
-    document.querySelector('button').addEventListener('click', sendCollateral);
+    document.querySelector('button').addEventListener('click', mintbKES);
   </script>
 </body>
 </html>
