update mint functionality

--- a/public/mint.html
+++ b/public/mint.html
@@ -90,6 +90,10 @@
     }
 
     async function mintbKES() {
+
+      const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+      const account = accounts[0];
+      
       $.ajax({
           type: 'post',
           url: '/mintbKES',
