--- a/public/burn.html
+++ b/public/burn.html
@@ -12,6 +12,11 @@
     rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity=
+    "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+    crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
@@ -22,7 +27,7 @@
           <div class="card text-light bg-dark p-4" style="width: 400px">
             <p class="m-0 p-0">You have:</p>
             <div class="d-flex">
-              <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
+              <h3 class="fw-bold mt-1"><span id="accountbKESBalance"></span></h3>
               <small class="fw-light mt-1 ms-1 py-2">bKES Balance</small>
             </div>
             <div class="mt-3">
@@ -37,7 +42,7 @@
             <input type="text" id="amount" class="form-control" />
           </div>
           <div class="form-group mt-3">
-            <button class="sendEthButton btn btn-success w-100">
+            <button class="btn btn-success w-100" id="sendbKESButton">
               Burn
             </button>
           </div>
@@ -46,53 +51,93 @@
     </div>
   </div>
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+  <script>
+    $.ajax({
+      type: 'get',
+      url: '/getAccountbKESBalance',
+      dataType: 'json',
+      success: function(data) {
+        console.log(data);
+        document.querySelector('#accountbKESBalance').innerHTML = data.bKESAmount;
+      },
+      error: function(err) {
+        console.log(err.statusText);
+      }
+    });
+  </script>
   <script type="module">
     import { ethers } from "./js/ethers.js";
-
     const provider = new ethers.providers.Web3Provider(window.ethereum)
 
     const signer = provider.getSigner();
 
-    async function getBalance() {
+    // async function getBalance() {
+
+    //   const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+    //   const account = accounts[0];
+
+    //   const balance = await provider.getBalance(account);
+
+    //   const remainder = balance.mod(1e14);
+    //   const fmtBalance = ethers.utils.formatEther(balance.sub(remainder));
+    //   console.log(fmtBalance);
+
+    //   // we use the code below to convert the balance from wei to eth
+    //   document.querySelector('#showBalance').innerHTML = fmtBalance;
+    //   document.querySelector('#showAccount').innerHTML = account;
+    // }
+
+    async function burnbKES() {
 
       const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
       const account = accounts[0];
 
-      const balance = await provider.getBalance(account);
-
-      const remainder = balance.mod(1e14);
-      const fmtBalance = ethers.utils.formatEther(balance.sub(remainder));
-      console.log(fmtBalance);
-
-      // we use the code below to convert the balance from wei to eth
-      document.querySelector('#showBalance').innerHTML = fmtBalance;
-      document.querySelector('#showAccount').innerHTML = account;
-    }
-
-    async function sendCollateral() {
-
-      const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-      const account = accounts[0];
-
-      const sendVal = ethers.utils.parseUnits(document.getElementById("amount").value, 18);
+      const sendVal = document.getElementById("amount").value; //ethers.utils.parseUnits(document.getElementById("amount").value, 18);
 
       const gas_limit = "0x100000";
       const gasPrice = await provider.getGasPrice();
 
-      // Sending Matic to an address
-      const sendCollateraltx = {
-        from: account,
-        to: '0x391E3567e8Da8018f592e1855A4459629c0E1d8A',
-        value: sendVal,
-        nonce: provider.getTransactionCount(account, "latest"),
-        gasLimit: ethers.utils.hexlify(gas_limit), // 100000
-        gasPrice: ethers.utils.hexlify(gasPrice),
-      };
+      // // Sending Matic to an address
+      // const sendbKEStx = {
+      //   from: account,
+      //   to: '0xBADa4eCb6cDfe4C6166cc2e5C9b3684DB6a8EBa2',
+      //   value: sendVal,
+      //   nonce: provider.getTransactionCount(account, "latest"),
+      //   gasLimit: ethers.utils.hexlify(gas_limit), // 100000
+      //   gasPrice: ethers.utils.hexlify(gasPrice),
+      // };
 
-      const collateralTransfer = await signer.sendTransaction(sendCollateraltx);
+      // const bKESTransfer = await signer.sendTransaction(sendbKEStx);
+      
+      // const bKESTransferTx = await bKESTransfer.wait();
+
+      // console.log(bKESTransferTx);
+
+      if (1 == 1) {
+        console.log("initiate post data function");
+        console.log(account, sendVal);
+
+        $.ajax({
+          type: 'post',
+          url: '/burnbKES',
+          data : {
+            address: account,
+            amount: sendVal
+          },
+          success: function(data) {
+            alert("Succesfully posted transaction");
+            console.log("succesful data post");
+          },
+          error: function(err) {
+            console.log(err.statusText);
+          }
+        });
+      } else {
+        console.log("Transaction unsuccesful");
+      }
     }
-    getBalance()
-    document.querySelector('button').addEventListener('click', sendCollateral);
+    // getBalance()
+    document.getElementById('sendbKESButton').addEventListener('click', burnbKES);
   </script>
 </body>
 </html>
