--- a/public/burn.html
+++ b/public/burn.html
@@ -13,13 +13,36 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity=
-    "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-    crossorigin="anonymous">
-  </script>
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">bKES</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mint">Mint</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="burn">Burn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="debtPositions">Positions</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="container mt-">
     <div class="d-flex min-vh-100 justify-content-center align-items-center">
       <section class="border rounded p-4 py-5 shadow">
@@ -56,11 +79,11 @@
       type: 'get',
       url: '/getAccountbKESBalance',
       dataType: 'json',
-      success: function(data) {
+      success: function (data) {
         console.log(data);
         document.querySelector('#accountbKESBalance').innerHTML = data.bKESAmount;
       },
-      error: function(err) {
+      error: function (err) {
         console.log(err.statusText);
       }
     });
@@ -104,15 +127,15 @@
         $.ajax({
           type: 'post',
           url: '/burnbKES',
-          data : {
+          data: {
             address: account,
             amount: sendVal
           },
-          success: function(data) {
+          success: function (data) {
             alert("Succesfully posted transaction");
             console.log("succesful data post");
           },
-          error: function(err) {
+          error: function (err) {
             console.log(err.statusText);
           }
         });
@@ -124,4 +147,5 @@
     document.getElementById('sendbKESButton').addEventListener('click', burnbKES);
   </script>
 </body>
+
 </html>
