--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -12,9 +12,43 @@
         rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
+        rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+        </script>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">bKES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mint">Mint</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="burn">Burn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="debtPositions">Positions</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container mt-">
         <div class="d-flex min-vh-100 justify-content-center align-items-center">
             <section class="border rounded p-4 py-5 shadow">
@@ -33,18 +67,21 @@
                             <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
                             <td>5.12</td>
                             <td>@45</td>
+                            <td><button class="btn btn-danger w-100">Liquidate</button></td>
                         </tr>
                         <tr>
                             <th scope="row">2</th>
                             <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
                             <td>5.12</td>
                             <td>@45</td>
+                            <td><button class="btn btn-danger w-100">Liquidate</button></td>
                         </tr>
                         <tr>
                             <th scope="row">3</th>
                             <td>0x15cdcbb08cd5b2543a8e009dbf5a6c6d7d2ab53d</td>
                             <td>5.15</td>
                             <td>@45</td>
+                            <td><button class="btn btn-danger w-100">Liquidate</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -52,4 +89,5 @@
         </div>
     </div>
 </body>
+
 </html>
