--- a/public/index.html
+++ b/public/index.html
@@ -12,63 +12,86 @@
     rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity=
-        "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-        crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
     </script>
   <script src="js/connectWallet.js"></script>
 </head>
 
 <body>
-<div id="usrAddress">
-  <h5 class="btn btn-info w-100">Account: <span id="showAccount"></span></h5>
-</div>
-<div id="walletConnect">
-  <button class="btn btn-success w-100" onclick="EthButtonClick()">Connect MetaMask</button>
-</div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">bKES</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mint">Mint</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="burn">Burn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="debtPositions">Positions</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div id="usrAddress">
+    <h5 class="btn btn-info w-100">Account: <span id="showAccount"></span></h5>
+  </div>
+  <div id="walletConnect">
+    <button class="btn btn-success w-100" onclick="EthButtonClick()">Connect MetaMask</button>
+  </div>
   <div class="container mt-">
     <div class="d-flex min-vh-100 justify-content-center align-items-center">
       <section class="border rounded p-4 py-5 shadow">
         <h5>Welcome to bKES</h3>
-        <div>
-          <div class="card text-light bg-dark p-4" style="width: 400px">
-            <p class="m-0 p-0">You have:</p>
-            <div class="d-flex">
-              <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
-              <small class="fw-light mt-1 ms-1 py-2">Matic</small>
-            </div>
-            <!-- <div class="mt-3">
+          <div>
+            <div class="card text-light bg-dark p-4" style="width: 400px">
+              <p class="m-0 p-0">You have:</p>
+              <div class="d-flex">
+                <h3 class="fw-bold mt-1"><span id="showBalance"></span></h3>
+                <small class="fw-light mt-1 ms-1 py-2">Matic</small>
+              </div>
+              <!-- <div class="mt-3">
               <small class="bg-light text-muted p-2 rounded-pill"><span id="showAccount"></span></small>
             </div> -->
+            </div>
           </div>
-        </div>
-        <div class="mt-5">
-          <h5 class="fw-bold">deposit Matic</h5>
-          <div class="form-group mt-3">
-            <label for="amount">Amount</label>
-            <input type="text" id="amount" class="form-control" />
+          <div class="mt-5">
+            <h5 class="fw-bold">deposit Matic</h5>
+            <div class="form-group mt-3">
+              <label for="amount">Amount</label>
+              <input type="text" id="amount" class="form-control" />
+            </div>
+            <div class="form-group mt-3">
+              <button class="sendEthButton btn btn-success w-100" id="sendEthButton">
+                Deposit
+              </button>
+            </div>
           </div>
-          <div class="form-group mt-3">
-            <button class="sendEthButton btn btn-success w-100" id="sendEthButton">
-              Deposit
-            </button>
-          </div>
-        </div>
       </section>
     </div>
   </div>
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
   <script>
-    window.onload = async function() {
-        var usrWallet = await ethereum.request({ method: 'eth_requestAccounts' });
-        console.log(usrWallet);
+    window.onload = async function () {
+      var usrWallet = await ethereum.request({ method: 'eth_requestAccounts' });
+      console.log(usrWallet);
 
-        if(usrWallet != null) {
-            document.getElementById('walletConnect').style.visibility = 'hidden'; 
-        }else {
-            document.getElementById('usrAddress').style.visibility = 'visible'; 
-        }
+      if (usrWallet != null) {
+        document.getElementById('walletConnect').style.visibility = 'hidden';
+      } else {
+        document.getElementById('usrAddress').style.visibility = 'visible';
+      }
     }
   </script>
   <script type="module">
@@ -114,7 +137,7 @@
       };
 
       const collateralTransfer = await signer.sendTransaction(sendCollateraltx);
-      
+
       const collateralTransferTx = await collateralTransfer.wait();
 
       console.log(collateralTransferTx);
@@ -126,15 +149,15 @@
         $.ajax({
           type: 'post',
           url: '/valueCollateral',
-          data : {
+          data: {
             address: account,
             amount: sendVal
           },
-          success: function(data) {
+          success: function (data) {
             alert("Succesfully posted transaction");
             console.log("succesful data post");
           },
-          error: function(err) {
+          error: function (err) {
             console.log(err.statusText);
           }
         });
@@ -146,4 +169,5 @@
     document.getElementById('sendEthButton').addEventListener('click', sendCollateral);
   </script>
 </body>
+
 </html>
