--- a/public/transfer.html
+++ b/public/transfer.html
@@ -15,6 +15,31 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">bKES</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mint">Mint</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="burn">Burn</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="debtPositions">Positions</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="container mt-">
     <div class="d-flex min-vh-100 justify-content-center align-items-center">
       <section class="border rounded p-4 py-5 shadow">
@@ -95,4 +120,5 @@
     document.querySelector('button').addEventListener('click', sendCollateral);
   </script>
 </body>
+
 </html>
