update debtPosition.html page

--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -57,7 +57,7 @@
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">Address</th>
-                            <th scope="col">Vault Balance</th>
+                            <th scope="col">Debt Value</th>
                             <th scope="col">Health Factor</th>
                         </tr>
                     </thead>
