--- a/public/debtPositions.html
+++ b/public/debtPositions.html
@@ -52,7 +52,7 @@
     <div class="container mt-">
         <div class="d-flex min-vh-100 justify-content-center align-items-center">
             <section class="border rounded p-4 py-5 shadow">
-                <table class="table">
+                <table class="table" id="debtPositionsTable">
                     <thead>
                         <tr>
                             <th scope="col">#</th>
@@ -88,6 +88,137 @@
             </section>
         </div>
     </div>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+    <script>
+        $.ajax({
+            type: 'get',
+            url: '/getActiveDebtPositions',
+            dataType: 'json',
+            success: function (data) {
+                console.log(data);
+                document.querySelector('#vaultBalance').innerHTML = data.vaultAmount;
+            },
+            error: function (err) {
+                console.log(err.statusText);
+            }
+        });
+
+        function createTable() {
+            table = $('#debtPositionsTable').DataTable({
+                destroy: true,
+                responsive: false,
+                "ajax": {
+                    url: "/getActiveDebtPositions",
+                    type: 'get',
+                },
+                select: {
+                    style: 'single',
+                    selector: 'tr'
+                },
+                columnDefs: [{
+                    orderable: false,
+                    className: 'select-checkbox',
+                    targets: 0
+                }],
+                order: [
+                    [7, "desc"]
+                ],
+                scrollY: false,
+                scrollX: "100%",
+                scrollCollapse: true,
+                paging: true,
+                fixedColumns: true,
+                lengthChange: true,
+                columns: [{
+                    data: "id"
+                }, {
+                    data: "address"
+                }, {
+                    data: "debtValue"
+                }, {
+                    data: "dcr"
+                }
+
+                ],
+                "rowCallback": function (nRow, aData) {
+                    $('td', nRow).eq(0).html("");
+                    if (aData.dcr >= 85) {
+                        $('td', nRow).eq(8).html("<td><button type='button' class='btn btn-block btn-success'>Active</button></td>");
+                    } else {
+                        $('td', nRow).eq(8).html("<td><button type='button' class='btn btn-block btn-warning'>Liquidate</button></td>");
+                    }
+                }
+            });
+
+            $("#btnliquidate").click(function () {
+                if (table.rows('.selected').data().length > 0) {
+                    var data = table.rows('.selected').data()[0];
+                    $.ajax({
+                        url: "/liquidatePosition",
+                        type: "post",
+                        data: data
+                    });
+                    createTable();
+                } else
+                    alert("Select a position to continue.");
+            });
+
+            // var buttons = new $.fn.dataTable.Buttons(table, {
+            //     buttons: ['excelHtml5', 'pdfHtml5', 'print', 'colvis', ]
+            // });
+            // buttons.container().appendTo($('div.right.aligned.eight.column:eq(0)', table.table().container()));
+        }
+
+        $(document).ready(function () {
+            createTable();
+        });
+    </script>
+    <script type="module">
+        import { ethers } from "./js/ethers.js";
+
+        const provider = new ethers.providers.Web3Provider(window.ethereum)
+
+        const signer = provider.getSigner();
+
+        async function getBalance() {
+
+            const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+            const account = accounts[0];
+
+            const balance = await provider.getBalance(account);
+
+            const remainder = balance.mod(1e14);
+            const fmtBalance = ethers.utils.formatEther(balance.sub(remainder));
+            console.log(fmtBalance);
+
+            // we use the code below to convert the balance from wei to eth
+            // document.querySelector('#showBalance').innerHTML = fmtBalance;
+            document.querySelector('#showAccount').innerHTML = account;
+        }
+
+        async function liquidatePosition() {
+
+            const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+            const account = accounts[0];
+
+            $.ajax({
+                type: 'post',
+                url: '/mintbKES',
+                data: {
+                    address: account,
+                    amount: document.getElementById("amount").value
+                },
+                success: function (data) {
+                    console.log("succesful data post");
+                },
+                error: function (err) {
+                    console.log(err.statusText);
+                }
+            });
+        }
+        getBalance()
+        document.getElementById('mintbKESButton').addEventListener('click', mintbKES);
+    </script>
 </body>
 
 </html>
